[project]

name = "groktest"
version = "0.3.2" # Sync with groktest.__init__
authors = [{ name = "Garrett Smith", email = "garrett@placeon.earth" }]
description = "Literate testing framework based on Python doctest"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]
dependencies = ["pyyaml"]

[project.optional-dependencies]

dev = ["black", "build", "twine"]

[project.scripts]

groktest = "groktest.__main__:main"

[project.urls]

"Homepage" = "https://github.com/gar1t/groktest"
"Bug Tracker" = "https://github.com/gar1t/groktest/issues"

[tool.black]

skip-string-normalization = true
extend-exclude = "/groktest/_vendor_"

[tool.groktest]

include = ["README.md", "docs/*.md", "examples/*.md"]

exclude = [
  "docs/yaml.md",
  "examples/unknown-format.md",
  "examples/fail-fast.md",
]

python.init = """
from groktest._test_util import *
"""
